; ModuleID = '/home/carl/AnghaBench/TDengine/src/kit/shell/src/extr_shellWindows.c_shellReadCommand.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/kit/shell/src/extr_shellWindows.c_shellReadCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i8* }

@MAX_COMMAND_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shellReadCommand(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_6__, align 8
  %6 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = call i32 @memset(%struct.TYPE_6__* %5, i32 0, i32 16)
  %8 = load i32, i32* @MAX_COMMAND_SIZE, align 4
  %9 = call i64 @calloc(i32 1, i32 %8)
  %10 = inttoptr i64 %9 to i8*
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i8* %10, i8** %11, align 8
  %12 = load i32, i32* @MAX_COMMAND_SIZE, align 4
  %13 = call i64 @calloc(i32 1, i32 %12)
  %14 = inttoptr i64 %13 to i8*
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i8* %14, i8** %15, align 8
  br label %16

16:                                               ; preds = %2, %45
  %17 = call signext i8 (...) @getchar()
  store i8 %17, i8* %6, align 1
  %18 = load i8, i8* %6, align 1
  %19 = sext i8 %18 to i32
  switch i32 %19, label %42 [
    i32 10, label %20
    i32 13, label %20
  ]

20:                                               ; preds = %16, %16
  %21 = call i32 @isReadyGo(%struct.TYPE_6__* %5)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %20
  %24 = load i8*, i8** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  %28 = load i8*, i8** %27, align 8
  %29 = call i32 @sprintf(i8* %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %26, i8* %28)
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @free(i8* %31)
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i8* null, i8** %33, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  %35 = load i8*, i8** %34, align 8
  %36 = call i32 @free(i8* %35)
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i8* null, i8** %37, align 8
  ret void

38:                                               ; preds = %20
  %39 = call i32 (...) @shellPrintContinuePrompt()
  %40 = call i32 @updateBuffer(%struct.TYPE_6__* %5)
  br label %41

41:                                               ; preds = %38
  br label %45

42:                                               ; preds = %16
  %43 = load i8, i8* %6, align 1
  %44 = call i32 @insertChar(%struct.TYPE_6__* %5, i8 signext %43)
  br label %45

45:                                               ; preds = %42, %41
  br label %16
}

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local signext i8 @getchar(...) #1

declare dso_local i32 @isReadyGo(%struct.TYPE_6__*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @shellPrintContinuePrompt(...) #1

declare dso_local i32 @updateBuffer(%struct.TYPE_6__*) #1

declare dso_local i32 @insertChar(%struct.TYPE_6__*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
